--- a/ethereum/package.json
+++ b/ethereum/package.json
@@ -9,7 +9,7 @@
     "depcheck": "echo '@chainlink/box' && depcheck --ignore-dirs=build/contracts || true",
     "solhint": "solhint ./contracts/**/*.sol",
     "lint": "yarn solhint",
-    "migrate:dev": "npx truffle migrate --reset --network cldev",
+    "migrate:dev": "npx truffle migrate --reset --network ganache",
     "migrate:live": "npx truffle migrate --network live",
     "test": "NODE_ENV=test npx truffle test"
   },
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@chainlink/belt": "^0.0.1",
     "@truffle/hdwallet-provider": "^1.0.30",
+    "@truffle/require": "^2.0.48",
     "chai": "^4.2.0",
     "depcheck": "^0.9.1",
     "openzeppelin-test-helpers": "^0.4.3",
